--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -1,5 +1,8 @@
 fixtures:
   forge_modules:
-    stdlib: 'puppetlabs-stdlib'
+    apt: 'puppetlabs/apt'
+    concat: 'puppetlabs/concat'
+    epel: 'stahnma/epel'
+    stdlib: 'puppetlabs/stdlib'
   symlinks:
     amavisd: "#{source_dir}"
