Get rid of syck gem and just disable testing Puppet 3.8.0 on Ruby 2.2

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,3 +30,5 @@ matrix:
     env: PUPPET_GEM_VERSION="~> 3.7.0"
   - rvm: 2.2
     env: PUPPET_GEM_VERSION="~> 3.8.0"
+  - rvm: 2.2
+    env: PUPPET_GEM_VERSION="~> 3.8.0" FUTURE_PARSER="yes"
