Start caching fixtures directory in Travis

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,15 @@
-.librarian
-.tmp
-spec/fixtures
-.DS_Store
-*.swp
-.vagrant
+.*.sw?
 .bundle
+.DS_Store
+.idea
+.librarian
+.project
+.rspec_system
+.tmp
+.vagrant
+spec/fixtures
+*.swp
 /spec/fixtures/manifests
 /spec/fixtures/modules
-.rspec_system
 Puppetfile.lock
 Gemfile.lock
