--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -3,6 +3,8 @@ fixtures:
     apt: 'puppetlabs/apt'
     concat: 'puppetlabs/concat'
     epel: 'stahnma/epel'
-    stdlib: 'puppetlabs/stdlib'
+    stdlib:
+      repo: 'puppetlabs/stdlib'
+      ref: '4.12.0'
   symlinks:
     amavisd: "#{source_dir}"
