Stick apt module version

--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -1,6 +1,8 @@
 fixtures:
   forge_modules:
-    apt: 'puppetlabs/apt'
+    apt:
+      repo: 'puppetlabs/apt'
+      ref: '2.4.0'
     concat:
       repo: 'puppetlabs/concat'
       ref: '2.2.1'
