--- a/.travis.yml
+++ b/.travis.yml
@@ -27,3 +27,7 @@ matrix:
   exclude:
   - rvm: 2.2
     env: PUPPET_GEM_VERSION="~> 3.8"
+  - rvm: 1.9.3
+    env: PUPPET_GEM_VERSION="~> 4.0"
+  - rvm: 2.0.0
+    env: PUPPET_GEM_VERSION="~> 4.0"
