* Move to CircleCI * PDK conversion * Lint all Ruby with Rubocop * Add yumrepos_core to .fixtures.yml for Puppet 6 compatibility * Remove unneeded tests directory * Bump the version in metadata.json * Update the README * Add the correct license file

--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -7,5 +7,6 @@ fixtures:
     epel: 'stahnma/epel'
     stdlib:
       repo: 'puppetlabs/stdlib'
+    yumrepo_core: 'puppetlabs/yumrepo_core'
   symlinks:
     amavisd: "#{source_dir}"
