--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -109,4 +109,4 @@ jobs:
         run: 'bundle exec rake spec_prep'
 
       - name: 'Run unit tests'
-        run: 'bundle exec rake spec:simplecov'
+        run: 'bundle exec rake spec'
