--- a/.sync.yml
+++ b/.sync.yml
@@ -33,4 +33,6 @@ Gemfile:
 spec/default_facts.yml:
   delete: true
 spec/spec_helper.rb:
+  coverage_report: true
   hiera_config: 'spec/fixtures/hiera.yaml'
+  mock_with: ':rspec'
