--- a/.pdkignore
+++ b/.pdkignore
@@ -24,7 +24,9 @@
 .project
 .envrc
 /inventory.yaml
+/spec/fixtures/litmus_inventory.yaml
 /appveyor.yml
+/.editorconfig
 /.fixtures.yml
 /Gemfile
 /.gitattributes
@@ -41,3 +43,4 @@
 /spec/
 /.vscode/
 /.sync.yml
+/.devcontainer/
