--- a/.sync.yml
+++ b/.sync.yml
@@ -29,7 +29,7 @@ Gemfile:
       - gem: 'concurrent-ruby'
         version: '< 1.2.0'
       - gem: 'pdk'
-      - gem: 'puppet-lint-legacy_facts-check'
+        version: '~> 3.0.0'
 spec/default_facts.yml:
   delete: true
 spec/spec_helper.rb:
