--- a/.github/workflows/test_build.yaml
+++ b/.github/workflows/test_build.yaml
@@ -5,31 +5,9 @@ name: 'test_build'
   pull_request:
     branches:
       - 'main'
-  push:
-    branches:
-      - 'main'
 
 jobs:
   test_build:
-
-    runs-on: 'ubuntu-latest'
-
-    steps:
-      - name: 'Checkout repo'
-        uses: 'actions/checkout@v4'
-
-      - name: 'Set up Ruby'
-        uses: 'ruby/setup-ruby@v1.153.0'
-        env:
-          BUNDLE_SILENCE_ROOT_WARNING: '1'
-          BUNDLE_WITH: 'development'
-        with:
-          bundler-cache: true
-          ruby-version: '3.2'
-          rubygems: 'latest'
-
-      - name: 'Module build'
-        run: 'bundle exec pdk build --force'
-
-      - name: 'Test module install'
-        run: 'bundle exec puppet module install pkg/puppet-amavisd-*.tar.gz'
+    uses: broadinstitute/shared-workflows/.github/workflows/puppet-test-deploy.yml@v1.4.1
+    with:
+      puppet_package_name: puppet-amavisd
